# tp6-note-bastien_victor_alexisr

./: .gitignore  CMakeLists.txt  README.md  card.cpp  card.hpp  compte_rendu.md  diagram.txt  dice.cpp  dice.hpp  joueur.cpp  joueur.h  main.cc  main.cpp  player.cpp  player.h  player.hpp  property.cpp  property.h  property.hpp  specs.md
sources/: cards.cc  cards.h  gamecore.cc  gamecore.cpp  gamecore.h  gamecore.hpp  managers.cc  managers.h  player.cc  player.cpp  player.h  player.hpp  spaces.cc  spaces.cpp  spaces.h  spaces.hpp
test/: cards_unittest.cc  gamecore_unittest.cc  main_unittest.cc  spaces_unittest.cc
utils/: input_manager.cc  input_manager.h  iomanager.cc  iomanager.h
